@startuml

title __IMPLEMENTATION's Class Diagram__\n

  namespace ethanmmd.mastermind {
    namespace controllers {
      namespace implementation {
        class ethanmmd.mastermind.controllers.implementation.LogicImplementation {
            + LogicImplementation()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      namespace implementation {
        class ethanmmd.mastermind.controllers.implementation.ProposalControllerImplementation {
            + ProposalControllerImplementation()
            + addProposedCombination()
            + getAttempts()
            + getProposedCombination()
            + getResult()
            + isLooser()
            + isWinner()
            + next()
            + redo()
            + redoable()
            + undo()
            + undoable()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      namespace implementation {
        class ethanmmd.mastermind.controllers.implementation.ResumeControllerImplementation {
            + ResumeControllerImplementation()
            + accept()
            + resume()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      namespace implementation {
        class ethanmmd.mastermind.controllers.implementation.StartControllerImplementation {
            + StartControllerImplementation()
            + start()
        }
      }
    }
  }
  

  ethanmmd.mastermind.controllers.implementation.LogicImplementation -up-|> ethanmmd.mastermind.controllers.Logic
  ethanmmd.mastermind.controllers.implementation.LogicImplementation o-- ethanmmd.mastermind.controllers.implementation.ProposalControllerImplementation : proposalControllerImplementation
  ethanmmd.mastermind.controllers.implementation.LogicImplementation o-- ethanmmd.mastermind.controllers.implementation.ResumeControllerImplementation : resumeControllerImplementation
  ethanmmd.mastermind.controllers.implementation.LogicImplementation o-- ethanmmd.mastermind.controllers.implementation.StartControllerImplementation : startControllerImplementation
  ethanmmd.mastermind.controllers.implementation.ProposalControllerImplementation -up-|> ethanmmd.mastermind.controllers.ProposalController
  ethanmmd.mastermind.controllers.implementation.ProposalControllerImplementation o-- ethanmmd.mastermind.controllers.ActionController : actionController
  ethanmmd.mastermind.controllers.implementation.ProposalControllerImplementation o-- ethanmmd.mastermind.controllers.RedoController : redoController
  ethanmmd.mastermind.controllers.implementation.ProposalControllerImplementation o-- ethanmmd.mastermind.controllers.UndoController : undoController
  ethanmmd.mastermind.controllers.implementation.ResumeControllerImplementation -up-|> ethanmmd.mastermind.controllers.ResumeController
  ethanmmd.mastermind.controllers.implementation.ResumeControllerImplementation o-- ethanmmd.mastermind.models.SessionImplementation : sessionImplementation
  ethanmmd.mastermind.controllers.implementation.StartControllerImplementation -up-|> ethanmmd.mastermind.controllers.StartController
  ethanmmd.mastermind.controllers.implementation.StartControllerImplementation o-- ethanmmd.mastermind.models.SessionImplementation : sessionImplementation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
